plugins {
    id "io.github.qishr.cascara-meta.java-library" version "0.1.0"
}


tasks.withType(JavaCompile).configureEach {
    options.release = 21
}


repositories {
	mavenLocal()
	mavenCentral()
}


dependencies {
    implementation(platform("io.github.qishr:cascara-meta-bom:$cascara_version"))
    implementation("io.github.qishr:cascara-common")
}


tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:-missing', '-quiet')
}


test {
    useJUnitPlatform()
    jvmArgs = [
        '--module-path', "$buildDir/modulepath",
        '--add-modules', 'ALL-MODULE-PATH'
    ]
}
